force-app/main/default/objects/Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Appointment (Doctor)</relationshipLabel>
    <relationshipName>Appointment1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>