force-app/main/default/objects/Appointment__c/fields/Doctor_Email__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Email__c</fullName>
    <label>Doctor Email</label>
    <type>Email</type>
</CustomField>