force-app/main/default/objects/Appointment__c/fields/isCompleted__c.field-meta.xml
<CustomField>
    <fullName>isCompleted__c</fullName>
    <formula>Date__c &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCompleted</label>
    <type>Checkbox</type>
</CustomField>