force-app/main/default/objects/Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patients__c</referenceTo>
    <relationshipLabel>Appointment (Patient)</relationshipLabel>
    <relationshipName>Appointment1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>