force-app/main/default/objects/Appointment__c/validationRules/Validate_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Name</fullName>
    <active>true</active>
    <errorConditionFormula>Name == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name can not be null, please enter a name</errorMessage>
</ValidationRule>