force-app/main/default/objects/Appointment__c/validationRules/Validation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Can not be less than today</errorMessage>
</ValidationRule>